syntax = "proto3";
package io.nais.devrapid.github;

import "google/protobuf/timestamp.proto";

message Pushdata {
  string latestCommitSha = 1;
  google.protobuf.Timestamp latestCommit = 2;
  google.protobuf.Timestamp webHookRecieved = 3;
}
